	* !!! Moved Solr multicore configuration up one level, making it the default

	* Changed solr.xml to only one core (english)
	* Added ElisionFilterFactory infrench schema.xml
	* Fixed encoding of french stopwords.txt
	* Added StempelPolishStemFilterFactory stemmer in polish schema.xml
	* Fixed typo in polish schema.xml
	* Fixed encoding of spanish stopwords.txt

2011-07-11  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #27987: Add download link to access filter check report
	* Added support for Index Queue access restriction from custom records

2011-07-07  Ingo Renner  <ingo.renner@dkd.de>

	* Changed Solr TYPO3 Plugin required version to 1.2.0

2011-07-06  Ingo Renner  <ingo.renner@dkd.de>

	* Changed version number to 2.0.0-dev

	* Added Garbage Collection
	* Added Index Queue
	* Added a basic backend module


	* !!! Changed tx_solr_Query::setSorting() to accept (require) the sorting string parameter to set the query's sort parameter

	* Added support for Record Access Rootline Elements
	* Fixed an issue where empty facets were not detected correctly when using option showEmptyFacets
	* Added new marker ###FACET_LINK.FACET_NAME###
	* Fixed usage of extension key in DevLog calls
	* Moved method getSearch() from tx_solr_pi_results to tx_solr_pluginbase_PluginBase
	* Moved method getCleanUserQuery() from tx_solr_pi_results to tx_solr_pluginbase_PluginBase
	* Added support for using a TypoScript path containing the link target parameter in the LINK and SOLRLINK viewhelpers (credits Timo Webler)
	* Updated SolrPhpClient to r60
	* Changed tx_solr_SolrService to use the new SolrPhpClient HTTP transport APIs
	* Fixed usage of (now) undefined class constant in tx_solr_SolrService caused by the update of SolrPhpClient
	* Changed logging for Solr POST requests to log request responses != 200 even when logging for POST is deactivated
	* Added logging for delete queries
	* Added an option to use curl as HTTP transport