@@ -10,15 +10,15 @@
 	status report - tx_solr_report_SolrconfigStatus - checking against this
 	name property, that status check must be updated as well.
 -->
-<config name="tx_solr-1-7-0--20110611">
+<config name="tx_solr-1-7-0--20110727">
 
 
 	<abortOnConfigurationError>${solr.abortOnConfigurationError:true}</abortOnConfigurationError>
 
 
 	<!-- Tika / Solr Cell -->
-	<lib dir="../contrib/extraction/lib" />
 	<lib dir="../dist/" regex="apache-solr-cell-\d.*\.jar" />
+	<lib dir="../contrib/extraction/lib" />
 
 	<!-- Clustering -->
 	<lib dir="../dist/" regex="apache-solr-clustering-\d.*\.jar" />
@@ -27,6 +27,11 @@
 	<!-- Data Import Handler -->
 	<lib dir="../dist/" regex="apache-solr-dataimporthandler-.*\.jar" />
 	<lib dir="../contrib/dataimporthandler/lib/" />
+
+	<!-- Language Analysis Extras -->
+	<lib dir="../dist/" regex="apache-solr-analysis-extras-.*\.jar" />
+	<lib dir="../contrib/analysis-extras/lib/" />
+	<lib dir="../contrib/analysis-extras/lucene-libs/" />
 
 	<!-- TYPO3 Plugins -->
 	<lib dir="../typo3lib/" />
